Fixing header layout bugs

--- a/css/light/generic.css
+++ b/css/light/generic.css
@@ -149,13 +149,12 @@ a, p {
 
 #header .search input:hover, #header .search input:active {
 
-	background: #97bbbb;
+	/*background: #97bbbb;*/
+/**/
+	/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#589595', endColorstr='#4a7d7d'); *//* for IE */
+	/*background: -webkit-gradient(linear, left top, left bottom, from(#589595), to(#4a7d7d)); *//* for webkit browsers */
+	/*background: -moz-linear-gradient(top,  #589595,  #4a7d7d); *//* for firefox 3.6+ */
 
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#589595', endColorstr='#4a7d7d'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#589595), to(#4a7d7d)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #589595,  #4a7d7d); /* for firefox 3.6+ */
-
-	border: 1px solid #000;
 }
 
 #header .nav {
@@ -163,7 +162,9 @@ a, p {
 }
 
 #header .search {
-	margin-left: 55px;
+	margin-left: 0;
+	width: 300px;
+	float: left;
 }
 
 #header .social .item {
